...
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDT-B0-S0m">
                                <rect key="frame" x="204" y="182" width="167" height="30"/>
                                <color key="backgroundColor" red="0.30588235294117649" green="0.066666666666666666" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Menu">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                            <constraint firstItem="QDT-B0-S0m" firstAttribute="leading" secondItem="5Sf-K3-vl9" secondAttribute="trailing" constant="6" id="lfy-sD-mNz"/>
                            <constraint firstAttribute="trailing" secondItem="MBq-bT-Pqj" secondAttribute="trailing" constant="5" id="ouL-S6-NjH"/>
                            <constraint firstItem="9mS-qS-AFf" firstAttribute="leading" secondItem="olh-bf-aj1" secondAttribute="leading" id="tV9-VM-DmE"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="9pz-Oz-zxM">
                        <barButtonItem key="rightBarButtonItem" title="Hours" id="hFZ-Bx-vc6">
                            <connections>
                                <action selector="goToHoursTable:" destination="FG6-dc-Nvr" id="vNQ-x3-T4S"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
